fix: overflow fix

--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -215,4 +215,9 @@
       padding: $spacer*.5 0;
     }
   }
+  .menu-open & {
+    &::after {
+      opacity: 0;
+    }
+  }
 }
