--- a/src/sass/sections/_most-wanted.scss
+++ b/src/sass/sections/_most-wanted.scss
@@ -1,4 +1,5 @@
-.most-wanted { 
+.most-wanted {
+  overflow-x: hidden; 
   .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
